# test_task_for_onr

./: LICENSE  README.md
tasks/task1/: task11.md  task12.md  task13.py  task14.md
tasks/task2/task2.1/: main.py  requirements.txt
tasks/task2/task2.1/core/: database.py  security.py
tasks/task2/task2.1/models/: user_models.py
tasks/task2/task2.1/routers/: auth_routers.py
tasks/task2/task2.1/schemas/: user_schemas.py
tasks/task2/task2.1/services/: user_services.py
tasks/task2/task2.2/: main.py  requirements.txt
tasks/task3/: CMakeLists.txt  buy.cpp  buy.hpp  check.cpp  check.hpp  main.cpp  product.cpp  product.hpp  products.json
tasks/task4/: go.mod  index.html  main.go
